reformat/optimise code

--- a/AndroidBootstrap/res/layout/bootstrap_button.xml
+++ b/AndroidBootstrap/res/layout/bootstrap_button.xml
@@ -6,7 +6,8 @@
     android:duplicateParentState="true"
     android:orientation="horizontal"
     android:paddingBottom="10dp"
-    android:paddingTop="10dp">
+    android:paddingTop="10dp"
+    >
 
     <TextView
         android:id="@+id/lblLeft"
@@ -14,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:paddingLeft="15dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        />
 
     <TextView
         android:id="@+id/lblMiddle"
@@ -25,7 +27,8 @@
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:visibility="gone"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        />
 
     <TextView
         android:id="@+id/lblRight"
@@ -33,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:paddingRight="15dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        />
 
 </LinearLayout>
