--- a/AndroidBootstrap/res/drawable/bthumbnail_container_rounded.xml
+++ b/AndroidBootstrap/res/drawable/bthumbnail_container_rounded.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-         
-    <item><shape>
+
+    <item>
+        <shape>
             <solid android:color="@color/bthumbnail_background" />
             <stroke android:width="1dp" android:color="@color/bthumbnail_border" />
-            <corners android:radius="@dimen/bthumbnail_rounded_corner_radius"/>
-        </shape></item>
+            <corners android:radius="@dimen/bthumbnail_rounded_corner_radius" />
+        </shape>
+    </item>
 
 </selector>
