--- a/AndroidBootstrap/res/drawable/bthumbnail_container_square.xml
+++ b/AndroidBootstrap/res/drawable/bthumbnail_container_square.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-         
-    <item><shape>
+
+    <item>
+        <shape>
             <solid android:color="@color/bthumbnail_background" />
             <stroke android:width="1dp" android:color="@color/bthumbnail_border" />
-        </shape></item>
+        </shape>
+    </item>
 
 </selector>
