--- a/AndroidBootstrap/res/drawable/bthumbnail_placeholder_default.xml
+++ b/AndroidBootstrap/res/drawable/bthumbnail_placeholder_default.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-         
-    <item><shape android:shape="rectangle">
+
+    <item>
+        <shape android:shape="rectangle">
             <solid android:color="@color/bthumbnail_placeholder" />
-            
-        </shape></item>
+
+        </shape>
+    </item>
 
 </selector>
