--- a/AndroidBootstrap/res/layout/bootstrap_edit_text.xml
+++ b/AndroidBootstrap/res/layout/bootstrap_edit_text.xml
@@ -3,12 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/layout"
-    android:orientation="horizontal">
- <EditText
-     android:id="@+id/txtText"   
-     android:layout_height="fill_parent"
-     android:layout_width="fill_parent"
-     android:layout_gravity="center"
-     android:hint=""
-    />
+    android:orientation="horizontal"
+    >
+
+    <EditText
+        android:id="@+id/txtText"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_gravity="center"
+        android:hint=""
+        />
 </LinearLayout>
