--- a/AndroidBootstrap/res/layout/font_awesome_text.xml
+++ b/AndroidBootstrap/res/layout/font_awesome_text.xml
@@ -3,12 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/layout"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    >
+
     <TextView
-     android:id="@+id/lblText"   
-     android:layout_height="wrap_content"
-     android:layout_width="wrap_content"
-     android:layout_gravity="center"
-     android:padding="3dp"
-    />
+        android:id="@+id/lblText"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:padding="3dp"
+        />
 </LinearLayout>
