--- a/AndroidBootstrap/res/layout/row_title.xml
+++ b/AndroidBootstrap/res/layout/row_title.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-	android:orientation="horizontal"
-	android:padding="10dp">
-	
+    android:orientation="horizontal"
+    android:padding="10dp"
+    >
+
     <TextView
         android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
-    	android:id="@+id/lblTitle"
-    	android:gravity="left"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblTitle"
+        android:gravity="left"
         />
 </LinearLayout>
