--- a/AndroidBootstrapTest/res/layout/bootstrap_button_basic_buttons_example.xml
+++ b/AndroidBootstrapTest/res/layout/bootstrap_button_basic_buttons_example.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Basic Buttons" />
+        android:text="Basic Buttons"
+        />
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            >
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:id="@+id/btnOne"
@@ -27,7 +31,8 @@
                 android:layout_margin="10dp"
                 android:text="Default"
                 bootstrapbutton:bb_icon_left="fa-heart"
-                bootstrapbutton:bb_type="default" />
+                bootstrapbutton:bb_type="default"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:id="@+id/btnTwo"
@@ -36,7 +41,8 @@
                 android:layout_margin="10dp"
                 android:text="Primary"
                 bootstrapbutton:bb_icon_right="fa-trophy"
-                bootstrapbutton:bb_type="primary" />
+                bootstrapbutton:bb_type="primary"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:id="@+id/btnThree"
@@ -45,7 +51,8 @@
                 android:layout_margin="10dp"
                 android:text="Info"
                 bootstrapbutton:bb_icon_left="fa-thumb-tack"
-                bootstrapbutton:bb_type="info" />
+                bootstrapbutton:bb_type="info"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -53,7 +60,8 @@
                 android:layout_margin="10dp"
                 android:text="Success"
                 bootstrapbutton:bb_icon_right="fa-android"
-                bootstrapbutton:bb_type="success" />
+                bootstrapbutton:bb_type="success"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -61,7 +69,8 @@
                 android:layout_margin="10dp"
                 android:text="Warning"
                 bootstrapbutton:bb_icon_left="fa-plane"
-                bootstrapbutton:bb_type="warning" />
+                bootstrapbutton:bb_type="warning"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -69,7 +78,8 @@
                 android:layout_margin="10dp"
                 android:text="Danger"
                 bootstrapbutton:bb_icon_right="fa-lemon-o"
-                bootstrapbutton:bb_type="danger" />
+                bootstrapbutton:bb_type="danger"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -77,7 +87,8 @@
                 android:layout_margin="10dp"
                 android:text="inverse"
                 bootstrapbutton:bb_icon_left="fa-floppy-o"
-                bootstrapbutton:bb_type="inverse" />
+                bootstrapbutton:bb_type="inverse"
+                />
         </LinearLayout>
     </HorizontalScrollView>
 
