--- a/AndroidBootstrapTest/res/layout/bootstrap_button_other_buttons_example.xml
+++ b/AndroidBootstrapTest/res/layout/bootstrap_button_other_buttons_example.xml
@@ -3,22 +3,26 @@
     xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Other Buttons" />
+        android:text="Other Buttons"
+        />
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            >
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -27,7 +31,8 @@
                 android:text="Just text"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="default"
-                bootstrapbutton:bb_type="primary" />
+                bootstrapbutton:bb_type="primary"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -38,7 +43,8 @@
                 bootstrapbutton:bb_icon_right="fa-chevron-circle-left"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="default"
-                bootstrapbutton:bb_type="primary" />
+                bootstrapbutton:bb_type="primary"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -47,7 +53,8 @@
                 bootstrapbutton:bb_icon_left="fa-female"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="default"
-                bootstrapbutton:bb_type="primary" />
+                bootstrapbutton:bb_type="primary"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -56,7 +63,8 @@
                 bootstrapbutton:bb_icon_left="fa-certificate"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="default"
-                bootstrapbutton:bb_type="info" />
+                bootstrapbutton:bb_type="info"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -65,7 +73,8 @@
                 bootstrapbutton:bb_icon_left="fa-tachometer"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="default"
-                bootstrapbutton:bb_type="success" />
+                bootstrapbutton:bb_type="success"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -74,7 +83,8 @@
                 bootstrapbutton:bb_icon_left="fa-umbrella"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="warning"
-                bootstrapbutton:bb_type="info" />
+                bootstrapbutton:bb_type="info"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -83,7 +93,8 @@
                 bootstrapbutton:bb_icon_left="fa-money"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="default"
-                bootstrapbutton:bb_type="danger" />
+                bootstrapbutton:bb_type="danger"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -92,7 +103,8 @@
                 bootstrapbutton:bb_icon_left="fa-desktop"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="default"
-                bootstrapbutton:bb_type="inverse" />
+                bootstrapbutton:bb_type="inverse"
+                />
         </LinearLayout>
     </HorizontalScrollView>
 
