--- a/AndroidBootstrapTest/res/layout/bootstrap_button_rounded_buttons_example.xml
+++ b/AndroidBootstrapTest/res/layout/bootstrap_button_rounded_buttons_example.xml
@@ -3,22 +3,26 @@
     xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Rounded Buttons" />
+        android:text="Rounded Buttons"
+        />
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            >
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -27,7 +31,8 @@
                 android:text="Success"
                 bootstrapbutton:bb_icon_right="fa-android"
                 bootstrapbutton:bb_roundedCorners="true"
-                bootstrapbutton:bb_type="success" />
+                bootstrapbutton:bb_type="success"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -36,7 +41,8 @@
                 android:text="Warning"
                 bootstrapbutton:bb_icon_left="fa-flask"
                 bootstrapbutton:bb_roundedCorners="true"
-                bootstrapbutton:bb_type="warning" />
+                bootstrapbutton:bb_type="warning"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -45,7 +51,8 @@
                 android:text="Danger"
                 bootstrapbutton:bb_icon_right="fa-question-circle"
                 bootstrapbutton:bb_roundedCorners="true"
-                bootstrapbutton:bb_type="danger" />
+                bootstrapbutton:bb_type="danger"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -54,7 +61,8 @@
                 android:text="inverse"
                 bootstrapbutton:bb_icon_left="fa-print"
                 bootstrapbutton:bb_roundedCorners="true"
-                bootstrapbutton:bb_type="inverse" />
+                bootstrapbutton:bb_type="inverse"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -63,7 +71,8 @@
                 android:text="Default"
                 bootstrapbutton:bb_icon_left="fa-globe"
                 bootstrapbutton:bb_roundedCorners="true"
-                bootstrapbutton:bb_type="default" />
+                bootstrapbutton:bb_type="default"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -72,7 +81,8 @@
                 android:text="Primary"
                 bootstrapbutton:bb_icon_right="fa-cloud"
                 bootstrapbutton:bb_roundedCorners="true"
-                bootstrapbutton:bb_type="primary" />
+                bootstrapbutton:bb_type="primary"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -81,7 +91,8 @@
                 android:text="Info"
                 bootstrapbutton:bb_icon_left="fa-briefcase"
                 bootstrapbutton:bb_roundedCorners="true"
-                bootstrapbutton:bb_type="info" />
+                bootstrapbutton:bb_type="info"
+                />
         </LinearLayout>
     </HorizontalScrollView>
 
