--- a/AndroidBootstrapTest/res/layout/bootstrap_button_size_buttons_example.xml
+++ b/AndroidBootstrapTest/res/layout/bootstrap_button_size_buttons_example.xml
@@ -3,22 +3,26 @@
     xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Sized Buttons" />
+        android:text="Sized Buttons"
+        />
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            >
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -28,7 +32,8 @@
                 bootstrapbutton:bb_icon_left="fa-rocket"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="large"
-                bootstrapbutton:bb_type="primary" />
+                bootstrapbutton:bb_type="primary"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -38,7 +43,8 @@
                 bootstrapbutton:bb_icon_left="fa-twitch"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="default"
-                bootstrapbutton:bb_type="primary" />
+                bootstrapbutton:bb_type="primary"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -48,7 +54,8 @@
                 bootstrapbutton:bb_icon_left="fa-puzzle-piece"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="small"
-                bootstrapbutton:bb_type="primary" />
+                bootstrapbutton:bb_type="primary"
+                />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:layout_width="wrap_content"
@@ -58,7 +65,8 @@
                 bootstrapbutton:bb_icon_left="fa-ticket"
                 bootstrapbutton:bb_roundedCorners="true"
                 bootstrapbutton:bb_size="xsmall"
-                bootstrapbutton:bb_type="primary" />
+                bootstrapbutton:bb_type="primary"
+                />
         </LinearLayout>
     </HorizontalScrollView>
 
