Fixed : enable to set BootstrapEdittext's gravity

--- a/AndroidBootstrap/res/values/attrs.xml
+++ b/AndroidBootstrap/res/values/attrs.xml
@@ -26,6 +26,7 @@
         <attr name="android:text" />
         <attr name="android:hint" />
         <attr name="android:enabled" />
+        <attr name="android:gravity" />
     </declare-styleable>
 
     <declare-styleable name="BootstrapThumbnail">
