begin refactor bootstrapbutton

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -7,6 +7,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity"
+              android:orientation="vertical"
     >
 
     <com.beardedhen.androidbootstrap.FontAwesomeText
@@ -18,5 +19,11 @@
         android:textSize="30sp"
         />
 
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/bb_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
-</RelativeLayout>
+
+</LinearLayout>
