--- a/AndroidBootstrap/src/main/res/values/colors.xml
+++ b/AndroidBootstrap/src/main/res/values/colors.xml
@@ -62,4 +62,48 @@
     <color name="bthumbnail_font">#7e7e7e</color>
 
 
+
+
+    <!-- Primary -->
+    <color name="bootstrap_btn_primary_text">#fff</color>
+    <color name="bootstrap_btn_primary_fill_default">#0275d8</color>
+    <color name="bootstrap_btn_primary_edge_default">#01549b</color>
+    <color name="bootstrap_btn_primary_fill_active">#025aa5</color>
+    <color name="bootstrap_btn_primary_edge_active">#01549b</color>
+
+    <!-- Secondary -->
+    <color name="bootstrap_btn_secondary_text">#373a3c</color>
+    <color name="bootstrap_btn_secondary_fill_default">#fff</color>
+    <color name="bootstrap_btn_secondary_edge_default">#ccc</color>
+    <color name="bootstrap_btn_secondary_fill_active">#e6e6e6</color>
+    <color name="bootstrap_btn_secondary_edge_active">#adadad</color>
+
+    <!-- Success -->
+    <color name="bootstrap_btn_success_text">#fff</color>
+    <color name="bootstrap_btn_success_fill_default">#5cb85c</color>
+    <color name="bootstrap_btn_success_edge_default">#5cb85c</color>
+    <color name="bootstrap_btn_success_fill_active">#449d44</color>
+    <color name="bootstrap_btn_success_edge_active">#419641</color>
+
+    <!-- Warning -->
+    <color name="bootstrap_btn_warning_text">#fff</color>
+    <color name="bootstrap_btn_warning_fill_default">#f0ad4e</color>
+    <color name="bootstrap_btn_warning_edge_default">#f0ad4e</color>
+    <color name="bootstrap_btn_warning_fill_active">#ec971f</color>
+    <color name="bootstrap_btn_warning_edge_active">#eb9316</color>
+
+    <!-- Danger -->
+    <color name="bootstrap_btn_danger_text">#fff</color>
+    <color name="bootstrap_btn_danger_fill_default">#d9534f</color>
+    <color name="bootstrap_btn_danger_edge_default">#d9534f</color>
+    <color name="bootstrap_btn_danger_fill_active">#c9302c</color>
+    <color name="bootstrap_btn_danger_edge_active">#c12e2a</color>
+
+    <!-- Link -->
+    <color name="bootstrap_btn_link_text">#014c8c</color>
+    <color name="bootstrap_btn_link_fill_default">@android:color/transparent</color>
+    <color name="bootstrap_btn_link_edge_default">@android:color/transparent</color>
+    <color name="bootstrap_btn_link_fill_active">@android:color/transparent</color>
+    <color name="bootstrap_btn_link_edge_active">@android:color/transparent</color>
+
 </resources>
